--- a/src/main/resources/templates/RegistrationPage.html
+++ b/src/main/resources/templates/RegistrationPage.html
@@ -87,7 +87,7 @@ button:hover {
 </style>
 </head>
 <body id="dashboardBody">
-	<input type="hidden" id="ssoid" name-="ssoid" th:value="${ssoid}" />
+	<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
 	<h5 id =adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>
 
 	<h1>STM:Silicone Test Method</h1>
@@ -115,8 +115,8 @@ button:hover {
 			<label for="stmNumber">STM Number<br>(Quality inspection
 				method_master <br>quality inspection characteristics)
 			</label> <input type="text" id="stmNumber" th:field="*{stmNo}"
-				style="height: 15px;"
-				oninput="updateDisabledField(this),updateFields()" required>
+				style="height: 15px;" maxlength="15"
+				oninput="updateDisabledField(this),updateFields()" required pattern="[a-zA-Z0-9]*" title="Alphabet and Number characters only allowed">
 		</div>
 		<input type="text" id="disabledField" th:field="*{stmVersion}"disabled="disabled"
 			style="height: 15px; margin-left: 280px;">
@@ -132,29 +132,30 @@ button:hover {
 
 		<div class="label-container">
 			<label for="textJapanese">Text (Short) Japanese</label> <input
-				type="text" id="textJapanese" th:field="*{textShortJP}">
+				type="text" id="textJapanese" th:field="*{textShortJP}" maxlength="200" 
+				pattern="^[a-zA-Z\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$" title="Alphabet and japanese characters only allowed" >
 		</div>
 
 		<div class="label-container">
 			<label for="textEnglish">Text (Short) English</label> <input
-				type="text" id="textEnglish" th:field="*{textShortEN}">
+				type="text" id="textEnglish" th:field="*{textShortEN}" maxlength="200" pattern="^[a-zA-Z\s]+$" title="Alphabet and Space only allowed">
 		</div>
 
 		<div class="label-container">
 			<label for="attachmentPdf">Attachment (PDF)</label>
 			<div class="file-input">
-				<input type="text" id="attachedPdf" disabled="disabled"> <input
-					type="file" id="attachmentPdf" name="pdfFile"
-					onchange="updatePdfFileName('attachedPdf', 'attachmentPdf', 'pdfError')">
+				<input type="text" id="attachedPdf" disabled="disabled" pattern="^[a-zA-Z0-9().\-\s]+$" title="Alphabet,number,dot,hypen and Space only allowed"> <input
+					type="file" id="attachmentPdf" name="pdfFile" maxlength="25"
+					onchange="updatePdfFileName('attachedPdf', 'attachmentPdf', 'pdfError')" >
 			</div>
 		</div>
 
 		<div class="label-container">
 			<label for="attachmentWord">Attachment (Word)</label>
 			<div class="file-input">
-				<input type="text" id="attachedWord" disabled="disabled"> <input
-					type="file" id="attachmentWord" name= "wordFile"
-					onchange="updateWordFileName('attachedWord', 'attachmentWord', 'wordError')">
+				<input type="text" id="attachedWord" disabled="disabled" pattern="^[a-zA-Z0-9().\-\s]+$" title="Alphabet,number,dot,hypen and Space only allowed"> <input
+					type="file" id="attachmentWord" name= "wordFile" maxlength="25"
+					onchange="updateWordFileName('attachedWord', 'attachmentWord', 'wordError')" >
 			</div>
 		</div>
 		<!-- Modal for PDF error -->
@@ -176,31 +177,31 @@ button:hover {
 		<div class="label-container">
 			<label for="lastUpdated">Last Updated (Drafting Date)</label> <input
 				type="text" id="lastUpdated" th:field="*{draftingDate}"
-				placeholder="yyyy/mm/dd" required>
+				placeholder="yyyy/mm/dd" onblur="validateDateFormat(this)" maxlength="10" required="required">
 		</div>
 
 		<div class="label-container">
 			<label for="finalDrafter">Final Drafter (Last Name)</label> <input
-				type="text" id="finalDrafter" th:field="*{finalDrafterName}" required>
+				type="text" id="finalDrafter" th:field="*{finalDrafterName}" maxlength="50" required pattern="^[a-zA-Z\s]+$" title="Alphabet and Space only allowed" >
 		</div>
 
 		<div class="label-container">
 			<label for="oldStmNumber">Old STM Number</label> <input type="text"
-				id="oldStmNumber" th:field="*{oldSTMNumber}" disabled="disabled">
+				id="oldStmNumber" th:field="*{oldSTMNumber}" disabled="disabled" maxlength="15">
 		</div>
 
 		<div class="label-container">
-			<label for="remarks1">Remarks 1</label> <input id="remarks1"
+			<label for="remarks1">Remarks 1</label> <input id="remarks1" maxlength="200"
 				type="text" th:field="*{remarks1}">
 		</div>
 
 		<div class="label-container">
-			<label for="note2">Note 2</label> <input type="text" id="note2"
+			<label for="note2">Note 2</label> <input type="text" id="note2" maxlength="200"
 				th:field="*{note2}">
 		</div>
 
 		<div class="label-container">
-			<label for="note3">Note 3</label> <input type="text" id="note3"
+			<label for="note3">Note 3</label> <input type="text" id="note3" maxlength="200"
 				th:field="*{note3}">
 		</div>
 
@@ -213,119 +214,6 @@ button:hover {
 				class="registerclose" onclick="window.close();">Close</button>
 		</div>
 	</form>
-
-	<script>
-		function openModal(message) {
-			const modal = document.getElementById('modal');
-			const modalMessage = document.getElementById('modalMessage');
-			modalMessage.textContent = message;
-			modal.style.display = 'block';
-		}
-
-		function closeModal() {
-			const modal = document.getElementById('modal');
-			modal.style.display = 'none';
-		}
-
-		function openModal(modalId) {
-			const modal = document.getElementById(modalId);
-			modal.style.display = 'flex';
-		}
-
-		function closeModal(modalId) {
-			const modal = document.getElementById(modalId);
-			modal.style.display = 'none';
-		}
-
-		function updatePdfFileName(textInputId, fileInputId, errorElementId) {
-			const textInput = document.getElementById(textInputId);
-			const fileInput = document.getElementById(fileInputId);
-			const errorElement = document.getElementById(errorElementId);
-
-			if (fileInput.files.length > 0) {
-				const fileName = fileInput.files[0].name;
-				const fileExtension = fileName.split('.').pop().toLowerCase();
-
-				if (fileExtension !== 'pdf') {
-					textInput.value = '';
-					openModal(errorElementId);
-				} else {
-					textInput.value = fileName;
-					closeModal(errorElementId);
-				}
-			} else {
-				textInput.value = '';
-				closeModal(errorElementId);
-			}
-		}
-
-		function updateWordFileName(textInputId, fileInputId, errorElementId) {
-			const textInput = document.getElementById(textInputId);
-			const fileInput = document.getElementById(fileInputId);
-			const errorElement = document.getElementById(errorElementId);
-
-			if (fileInput.files.length > 0) {
-				const fileName = fileInput.files[0].name;
-				const fileExtension = fileName.split('.').pop().toLowerCase();
-
-				if (fileExtension !== 'doc' && fileExtension !== 'docx') {
-					textInput.value = '';
-					openModal(errorElementId);
-				} else {
-					textInput.value = fileName;
-					closeModal(errorElementId);
-				}
-			} else {
-				textInput.value = '';
-				closeModal(errorElementId);
-			}
-		}
-
-		function updateDisabledField(input) {
-			const disabledField = document.getElementById('disabledField');
-
-			if (input.value.trim() !== '') {
-				disabledField.value = '00';
-			} else {
-				disabledField.value = '';
-			}
-		}
-
-		function updateFields() {
-			const stmNumber = document.getElementById('stmNumber').value;
-			const disabledField = document.getElementById('disabledField');
-			
-			//const linkDestination = document.getElementById('linkDestination');
-
-			// Assuming you want to concatenate stmNumber and disabledField values            
-			const concatenatedValue = stmNumber + disabledField.value;
-
-			// Update linkDestination field value
-			//linkDestination.value = concatenatedValue;
-		}
-		
-		// Set the duration for the messages to be displayed in milliseconds (e.g., 5000 for 5 seconds)
-		  var messageDuration = 5000;
-
-		  // Function to hide the success message after a certain duration
-		  function hideSuccessMessage() {
-		    var successMessageDiv = document.getElementById('successMessageDiv');
-		    if (successMessageDiv) {
-		      successMessageDiv.style.display = 'none';
-		    }
-		  }
-
-		  // Function to hide the error message after a certain duration
-		  function hideErrorMessage() {
-		    var errorMessageDiv = document.getElementById('errorMessageDiv');
-		    if (errorMessageDiv) {
-		      errorMessageDiv.style.display = 'none';
-		    }
-		  }
-
-		  // Set timeouts to hide messages after the specified duration
-		  setTimeout(hideSuccessMessage, messageDuration);
-		  setTimeout(hideErrorMessage, messageDuration);
-	</script>
+	 <script th:src="@{/js/register.js}"></script>
 </body>
 </html>
