--- a/src/main/resources/templates/ReviseScreen.html
+++ b/src/main/resources/templates/ReviseScreen.html
@@ -148,42 +148,44 @@ button:hover {
     <form th:action="@{/revise(ssoid = ${ssoid})}" th:object="${stm}" enctype="multipart/form-data" method="post">            
         <div class="label-container">
             <label for="stmNumber">STM Number<br>(Quality inspection method_master <br>quality inspection characteristics)</label>
-            <input type="text" id="stmNumber" name="" th:field="*{stmNo}" th:value="${stmNo}" style="height: 15px;" readonly="readonly"/>
+            <input type="text" id="stmNumber" name="" th:field="*{stmNo}" th:value="${stmNo}" style="height: 15px;" readonly="readonly" maxlength="15" />
         </div>
 
         <div class="label-container">
             <label for="revisionNumber">Revision Number</label>
-            <input type="text" style="height: 15px;" th:field="*{stmVersion}" th:value="${stmVersion}" readonly="readonly"/>
+            <input type="text" style="height: 15px;" th:field="*{stmVersion}" th:value="${stmVersion}" readonly="readonly" maxlength="4"/>
         </div>
 
         <div class="label-container">
             <label for="linkDestination">Link Destination(STM_parent number)</label>
-            <input type="text" id="linkDestination" th:field="*{linkDestination}" th:value="${linkDestination}" />
+            <input type="text" id="linkDestination" th:field="*{linkDestination}" th:value="${linkDestination}" maxlength="15" pattern="^[a-zA-Z0-9_]+$" 
+       title="Alphabet, number, and underscore only allowed"/>
         </div>
 
         <div class="label-container">
             <label for="textJapanese">Text (Short) Japanese</label>
-            <input type="text" id="textJapanese" th:field="*{textShortJP}" th:value="${textShortJP}" />
+            <input type="text" id="textJapanese" th:field="*{textShortJP}" th:value="${textShortJP}" maxlength="200"
+            pattern="^[a-zA-Z\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$" title="Alphabet and japanese characters only allowed"/>
         </div>
 
         <div class="label-container">
             <label for="textEnglish">Text (Short) English</label>
-            <input type="text" id="textEnglish" th:field="*{textShortEN}" th:value="${textShortEN}" />
+            <input type="text" id="textEnglish" th:field="*{textShortEN}" th:value="${textShortEN}" maxlength="200" pattern="^[a-zA-Z\s]+$" title="Alphabet and Space only allowed"/>
         </div>
 
         <div class="label-container">
             <label for="attachmentPdf">Attachment (PDF)</label>
             <div class="file-input">
-                <input type="text" id="attachedPdf"  th:field="*{pdfFile}" th:value="${pdfFile}"/>
-                <input type="file" id="attachmentPdf"  name="pdfFile" onchange="updatePdfFileName('attachedPdf', 'attachmentPdf', 'pdfError')" />
+                <input type="text" id="attachedPdf"  th:field="*{pdfFile}" th:value="${pdfFile}" maxlength="25" pattern="^[a-zA-Z0-9().\-\s]+$" title="Alphabet,number,dot,hypen and Space only allowed"/>
+                <input type="file" id="attachmentPdf"  name="pdfFile" onchange="updatePdfFileName('attachedPdf', 'attachmentPdf', 'pdfError')" maxlength="25"/>
             </div>
         </div>
 
         <div class="label-container">
             <label for="attachmentWord">Attachment (Word)</label>
             <div class="file-input">
-                <input type="text" id="attachedWord" th:field="*{wordFile}" th:value="${wordFile}" />
-                <input type="file" id="attachmentWord"  name="wordFile" onchange="updateWordFileName('attachedWord', 'attachmentWord', 'wordError')" />
+                <input type="text" id="attachedWord" th:field="*{wordFile}" th:value="${wordFile}" maxlength="25" pattern="^[a-zA-Z0-9().\-\s]+$" title="Alphabet,number,dot,hypen and Space only allowed"/>
+                <input type="file" id="attachmentWord"  name="wordFile" onchange="updateWordFileName('attachedWord', 'attachmentWord', 'wordError')" maxlength="25"/>
             </div>
         </div>
 
@@ -205,32 +207,32 @@ button:hover {
 
         <div class="label-container">
             <label for="lastUpdated">Last Updated (Drafting Date)</label>
-            <input type="text" id="lastUpdated" th:field="*{draftingDate}"  th:value="${#dates.format(draftingDate, 'yyyy/MM/dd')}"/>
+            <input type="text" id="lastUpdated" th:field="*{draftingDate}"  th:value="${#dates.format(draftingDate, 'yyyy/MM/dd')}" maxlength="10" onblur="validateDateFormat(this)" required="required"/>
         </div>
 
         <div class="label-container">
             <label for="finalDrafter">Final Drafter (Last Name)</label>
-            <input type="text" id="finalDrafter" th:field="*{finalDrafterName}" th:value="${finalDrafterName}" />
+            <input type="text" id="finalDrafter" th:field="*{finalDrafterName}" th:value="${finalDrafterName}" maxlength="50" pattern="^[a-zA-Z\s]+$" title="Alphabet and Space only allowed"/>
         </div>
 
         <div class="label-container">
             <label for="oldStmNumber">Old STM Number</label>
-            <input type="text" id="oldStmNumber" th:field="*{oldSTMNumber}" th:value="${oldSTMNumber}" />
+            <input type="text" id="oldStmNumber" th:field="*{oldSTMNumber}" th:value="${oldSTMNumber}" maxlength="15" pattern="[a-zA-Z0-9]*" title="Alphabet and Number characters only allowed"/>
         </div>
 
         <div class="label-container">
             <label for="remarks1">Remarks 1</label>
-            <input id="remarks1" type="text" th:field="*{remarks1}" th:value="${remarks1}" />
+            <input id="remarks1" type="text" th:field="*{remarks1}" th:value="${remarks1}" maxlength="200"/>
         </div>
 
         <div class="label-container">
             <label for="note2">Note 2</label>
-            <input type="text" id="note2" th:field="*{note2}" th:value="${note2}" />
+            <input type="text" id="note2" th:field="*{note2}" th:value="${note2}" maxlength="200"/>
         </div>
 
         <div class="label-container">
             <label for="note3">Note 3</label>
-            <input type="text" id="note3" th:field="*{note3}" th:value="${note3}" />
+            <input type="text" id="note3" th:field="*{note3}" th:value="${note3}" maxlength="200"/>
         </div>
         <div style="margin-top: 20px;">
             <button type="button" name="revise" class="registerclose" onclick="openModal('reviseConfirmation')">Revise</button>
@@ -246,104 +248,8 @@ button:hover {
          <button type="button" onclick="closeModal('reviseConfirmation')">no(N)</button>
          </div>
         </div>
-    </form>
-    
-    <script>
-		function openModal(message) {
-			const modal = document.getElementById('modal');
-			const modalMessage = document.getElementById('modalMessage');
-			modalMessage.textContent = message;
-			modal.style.display = 'block';
-		}
-
-		function closeModal() {
-			const modal = document.getElementById('modal');
-			modal.style.display = 'none';
-		}
-
-		function openModal(modalId) {
-			const modal = document.getElementById(modalId);
-			modal.style.display = 'flex';
-		}
-
-		function closeModal(modalId) {
-			const modal = document.getElementById(modalId);
-			modal.style.display = 'none';
-		}
-
-		function updatePdfFileName(textInputId, fileInputId, errorElementId) {
-			const textInput = document.getElementById(textInputId);
-			const fileInput = document.getElementById(fileInputId);
-			const errorElement = document.getElementById(errorElementId);
-
-			if (fileInput.files.length > 0) {
-				const fileName = fileInput.files[0].name;
-				const fileExtension = fileName.split('.').pop().toLowerCase();
-
-				if (fileExtension !== 'pdf') {
-					textInput.value = '';
-					openModal(errorElementId);
-				} else {
-					textInput.value = fileName;
-					closeModal(errorElementId);
-				}
-			} else {
-				textInput.value = '';
-				closeModal(errorElementId);
-			}
-		}
-
-		function updateWordFileName(textInputId, fileInputId, errorElementId) {
-			const textInput = document.getElementById(textInputId);
-			const fileInput = document.getElementById(fileInputId);
-			const errorElement = document.getElementById(errorElementId);
-
-			if (fileInput.files.length > 0) {
-				const fileName = fileInput.files[0].name;
-				const fileExtension = fileName.split('.').pop().toLowerCase();
-
-				if (fileExtension !== 'doc' && fileExtension !== 'docx') {
-					textInput.value = '';
-					openModal(errorElementId);
-				} else {
-					textInput.value = fileName;
-					closeModal(errorElementId);
-				}
-			} else {
-				textInput.value = '';
-				closeModal(errorElementId);
-			}
-		}
-		
-		function confirmRevise() {
-		    console.log("Confirming revise...");
-		    closeModal('reviseConfirmation');		    
-		    document.getElementById('reviseForm').submit();
-		}
-		
-		
-		// Set the duration for the messages to be displayed in milliseconds (e.g., 5000 for 5 seconds)
-		  var messageDuration = 5000;
-
-		  // Function to hide the success message after a certain duration
-		  function hideSuccessMessage() {
-		    var successMessageDiv = document.getElementById('successMessageDiv');
-		    if (successMessageDiv) {
-		      successMessageDiv.style.display = 'none';
-		    }
-		  }
-
-		  // Function to hide the error message after a certain duration
-		  function hideErrorMessage() {
-		    var errorMessageDiv = document.getElementById('errorMessageDiv');
-		    if (errorMessageDiv) {
-		      errorMessageDiv.style.display = 'none';
-		    }
-		  }
-
-		  // Set timeouts to hide messages after the specified duration
-		  setTimeout(hideSuccessMessage, messageDuration);
-		  setTimeout(hideErrorMessage, messageDuration);
-	</script>
+    </form>  
+    <script th:src="@{/js/Revise.js}"></script>
+	
 </body>
 </html>
