--- a/src/main/resources/static/CSS/styles.css
+++ b/src/main/resources/static/CSS/styles.css
@@ -96,110 +96,84 @@ input[type="text"] {
 	border: 2px solid rgb(0, 0, 0);
 }
 
-
 /* 
+/*Searchpage
 ADD[S]Samata 2023/11/14
 */
-body {
-	background-color: #C2D6A1;
-}
-
-.button1 {
-	background-color: navy;
+#recordDisplay {
+	color: #062d73;
+	font-size: 20px;
+	font-weight: bold;
 	text-align: center;
-	padding: 3px 15px;
-	min-width: 310px;
-	color: white;
-	font-size: 17px;
-	margin-right: 10px;
-	border: 2px solid black;
 
 }
 
-.button2 {
-	background-color: darkorange;
-	text-align: center;
-	min-width: 310px;
-	border-radius: 2px;
-	border: 2px solid black;
-
-	color: white;
-	font-size: 17px;
-	margin-right: 20px;
-	margin-left: 5%;
+.label-container {
+	display: flex;
+	width: 100%;
 }
 
-.button3 {
-	background-color: #50C878;
-	color: white;
-	border: 2px solid black;
-	min-width: 310px;
-	font-size: 17px;
+.label-container label {
+	width: 50%;
+	text-align: left;
+	margin: 10px 20px;
 }
 
-.button4 {
-	background-color: #50C878;
-	border: 2px solid black;
-
+.hedding {
+	padding: 20px 0;
 }
 
-.form-control {
-	border: 2px solid black;
-	color: red;
+.table-responsive {
+	margin-left: 80px;
+	margin-top: 60px;
 }
 
-h1 {
-	text-align: center;
+table,
+th,
+tr,
+thead {
+	border: 1px solid black;
+	border-collapse: collapse;
 }
 
-.content {
+/*ModifySearchdata */
+/*ADD[S]Samata */
+.close {
+	color: #aaa;
+	float: right;
+	font-size: 20px;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+.close:hover {
+	color: black;
+}
+
+.download-button {
+	background-color: red;
+}
+
+.modal {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	width: 500px;
-	height: 200px;
-	text-align: center;
-	background-color: #e8eae6;
-	box-sizing: border-box;
-	padding: 10px;
-	z-index: 100;
-	display: none;
-	border-radius: 20px;
-}
-.table-responsive{
-	margin-left: 80px;
-	margin-top: 60px;
-}
-table, th, tr,thead {
-  border: 1px solid black;
-  border-collapse: collapse;
+	background-color: #fefefe;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 300px;
+	color: red;
 }
 
-/*ADDED For ModifySearchdata */
-
-	.download-button {
-		margin-left: 10px;
-		padding: 8px;
-		background-color: red;
-		color: white;
-		border: black;
-		border-radius: 3px;
-		cursor: pointer;
-	}
-
-	.download-button:hover {
-		background-color: #555;
-	}
-	.close {
-		color: #aaa;
-		float: right;
-		font-size: 20px;
-		font-weight: bold;
-		cursor: pointer;
-	}
-
-	.close:hover {
-		color: black;
-	}
 /*ADD[E] Samata*/
