--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -5,20 +5,18 @@
 <head>
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<!--<script th:src="@{/assets/js/jquery-3.6.0.js}"></script>-->
-	<link rel="stylesheet" href="" th:href="@{/css/styles.css}">
+	<link rel="stylesheet" href="" th:href="@{/CSS/styles.css}">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 	<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="js/search.js"></script>
 	<style>
-		input[type="text"] {
-			display: inline-block;
-			width: 30%;
-			padding: 10px;
-			margin: 5px 0;
-			/* 	border: 1px solid #ccc; */
-			border-radius: 5px;
+		body {
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 0;
+			text-align: center;
+			background-color: #cbe3b5;
 		}
 
 		form {
@@ -26,91 +24,142 @@
 			margin: 0 auto;
 			padding: 20px;
 			background-color: #cbe3b5;
+			/*border: 1px solid #ddd;
+			border-radius: 5px; */
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+		}
+
+		input[type="text"] {
+			display: inline-block;
+			width: 40%;
+			padding: 10px;
+			height: 30%;
+			margin: 5px 0;
+			border: 2px solid rgb(0, 0, 0);
+			border-radius: 5px;
+		}
+
+		.search {
+			width: 30%;
+			color: #fff;
+			text-align: center;
+			border: 3px solid rgb(64, 0, 0);
+			border-radius: 10px;
+			background-color: darkblue;
+		}
+
+		.reset {
+			width: 30%;
+			color: #fff;
+			text-align: center;
+			border: 3px solid rgb(64, 0, 0);
+			border-radius: 10px;
+			background-color: coral;
+		}
+
+		.menu {
+			width: 30%;
+			color: #fff;
+			text-align: center;
+			border: 3px solid rgb(64, 0, 0);
+			border-radius: 10px;
+		}
+
+		.view {
+			width: 30%;
+			color: #fff;
+			text-align: center;
+			border: 3px solid rgb(64, 0, 0);
+			border-radius: 10px;
+			background-color: darkblue;
 		}
 	</style>
 </head>
 
-<body style="background-color: #cbe3b5;" th:onload="onLoadcall([[${STM}]])">
+<body style="background-color: #C2D6A1;" th:onload="onLoadcall([[${STM}]])">
 	<!-- ADDED[S] AMULYA To Display the ssoid-->
 	<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
 	<h5 id=adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>
 	<!-- ADDED[E] AMULYA To To Display the ssoid-->
 
-	<div class="row justify-content-center">
-		<div class="card" align="center">
-			<form method="post" class="form-horizontal" th:action="@{/searchClick(ssoid = ${ssoid})}">
-				<h1>STM:silicone test method</h1>
-				<!-- ADDED[S] AMULYA To Add Success and Failer Message-->
-				<!-- <p id="message" th:text="${message}"></p>
-				<p id="message" th:text="${error}"></p> -->
-				<div id="successMessageDiv" th:if="${message}">
-    <p style="color: green;" th:text="${message}"></p>
-</div>
-<div id="errorMessageDiv" th:if="${error}">
-    <p style="color: red;" th:text="${error}"></p>
-</div>
-				<!-- ADDED[E] AMULYA To Add Success and Failer Message-->
-				<div class="label-container" style="margin-top: 10%;">
-					<label for="stmNumber">STM Number
-					</label> <input type="text" style="border: 3px solid black; width: 172px;" name="stmNo"
-						maxlength="11" required>
-				</div>
-				<div class="label-container">
-					<label for="revisionNumber">Revision Number
-					</label> <input id="Revision number" style="border: 3px solid black; width: 172px;" maxlength="2">
-				</div>
+	<h1 id=hedding>STM:silicone test method</h1>
+	<p style="text-align: center;" id="recordDisplay" th:text="${records}"></p>
 
-				<div class="label-container">
-					<label for="linkDestination">Link Destination(STM_parent
-						number)</label> <input type="text" id="Link destination" name="linkDestination"
-						style="border: 3px solid black;" maxlength="11">
-				</div>
-
-				<div class="label-container">
-					<label for="textJapanese">Text (Short) Japanese</label> <input type="text" id="Japanese"
-						name="textShortJP" style="border: 3px solid black;" maxlength="255">
-				</div>
-
-				<div class="label-container">
-					<label for="textEnglish">Text (Short) English</label> <input type="text" id="English"
-						name="textShortEN" style="border: 3px solid black;" maxlength="255">
-				</div>
-
-				<div class="label-container">
-					<label for="finalDrafter">Final Drafter (Last Name)</label> <input type="text"
-						id="final drafter(Last name)" name="final_drafter_Name" style="border: 3px solid black;"
-						maxlength="255">
-				</div>
-
-
-				<div class="label-container">
-					<label for="last updated(Drafting date)">last updated(Drafting
-						date)</label>
-					<input type="text" style="border: 3px solid black;"
-						class="dobField timePeriodFrom1 datepicker-input" placeholder="yyyy/mm/dd" name=""
-						maxlength="8" /> ~
-					<input type="text" style="border: 3px solid black;" class="dobField timePeriodTo1 datepicker-input"
-						placeholder="yyyy/mm/dd" name="" maxlength="8" />
-				</div>
-				<div class="label-container">
-					<label for="oldStmNumber">Old STM Number</label> <input type="text" id="oldSTMnumber"
-						name="oldSTMNumber" style="border: 3px solid black;" maxlength="11">
-				</div>
-				<div style="display: flex; justify-content: space-between; margin-top: 80px;">
-					<button class="btn btn-primary button1" style="background-color: darkblue; color: white;"
-						type="submit" onsubmit="searchcall()">Search</button>
-
-					<button class="btn btn-primary button2" style="background-color: coral; color: white;" type="reset"
-						onclick="resetcall()">Reset</button>
-
-					<button class="btn btn-primary button4" style="color: white;" type="button"
-						th:onclick="|window.location.href='@{/dashboard(ssoid=${ssoid})}'|">Menu</button>
-				</div>
-			</form>
+	<form method="post" class="form-horizontal" th:action="@{/searchClick(ssoid = ${ssoid})}">
+		<div class="label-container" style="margin-top: 20px;">
+			<label for="stmNumber">STM Number <br>(Quality inspection
+				method_master <br>quality inspection characteristics)
+			</label> <input type="text" id="stmNumber" name="stmNo" maxlength="15" onkeydown="enterClick(1,event)"
+				pattern="[a-zA-Z0-9]+" title="Enter only Characters and Numbers" />
 		</div>
-	</div>
+
+		<div class="label-container">
+			<label for="revisionNumber">Revision Number</label>
+			<input type="text" id="Revision number" minlength="1" maxlength="4" name="stmVersion" pattern="[0-9]*"
+				title="Enter only Numbers." onkeydown="enterClick(2,event)" />
+		</div>
+
+		<div class="label-container">
+			<label for="linkDestination">Link Destination(STM_parent number)</label>
+			<input type="text" id="Link destination" name="linkDestination" maxlength="15"
+				onkeydown="enterClick(3,event)" pattern="[a-zA-Z0-9]+" title="Enter only Characters and Numbers" />
+		</div>
+
+		<div class="label-container">
+			<label for="textJapanese">Text (Short) Japanese</label>
+			<input type="text" id="Japanese" name="textShortJP" maxlength="200" onkeydown="enterClick(4,event)"
+				pattern="[a-zA-Z]*" title="Enter only Characters" />
+		</div>
+
+		<div class="label-container">
+			<label for="textEnglish">Text (Short) English</label>
+			<input type="text" id="English" name="textShortEN" maxlength="200" pattern="[a-zA-Z]*"
+				title="Enter only Characters" onkeydown="enterClick(5,event)" />
+		</div>
+
+		<div class="label-container">
+			<label for="last updated(Drafting date)">last updated(Drafting
+				date)</label>
+			<input type="text" s class="dobField timePeriodFrom1 datepicker-input" placeholder="yyyy/MM/dd"
+				name="startDraftDate" maxlength="10" onkeydown="enterClick(6,event)" id="draft_start_date"
+				title="Please Enter Date in yyyy/MM/dd."
+				pattern="(?:19|20)(?:[0-9]{2}\/(?:(?:0[1-9]|1[0-2])\/(?:0[1-9]|1[0-9]|2[0-8])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:29|30))|(?:(?:0[13578]|1[02])-31))|(?:[13579][26]|[02468][048])\/02\/29)" />
+			~
+			<input type="text" class="dobField timePeriodTo1 datepicker-input" placeholder="yyyy/MM/dd"
+				style="margin-left: 2%;" name="endDraftDate" maxlength="10" onkeydown="enterClick(7,event)"
+				id="draft_end_date" title="Please Enter Date in yyyy/MM/dd."
+				pattern="(?:19|20)(?:[0-9]{2}\/(?:(?:0[1-9]|1[0-2])\/(?:0[1-9]|1[0-9]|2[0-8])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:29|30))|(?:(?:0[13578]|1[02])-31))|(?:[13579][26]|[02468][048])\/02\/29)" />
+		</div>
+
+		<div class="label-container">
+			<label for="finalDrafter">Final Drafter (Last Name)</label>
+			<input type="text" id="finalDrafterName" name="finalDrafterName" max="100" title="Enter only characters"
+				pattern="[a-zA-Z]*" onkeydown="enterClick(8,event)" />
+		</div>
+
+		<div class="label-container">
+			<label for="oldStmNumber">Old STM Number</label>
+			<input type="text" id="oldSTMnumber" name="oldSTMNumber" maxlength="15" pattern="[a-zA-Z0-9]+"
+				title="Enter only Characters and Numbers" onkeydown="enterClick(9,event)" />
+		</div>
+
+		<div style="display: flex; justify-content: space-between; margin-top: 100px;">
+			<button class="btn btn-primary search" type="submit" id="searchbtn" onsubmit="searchcall()"
+				onkeydown="enterClick(10,event)">Search</button>
+
+			<button class="btn btn-primary reset" type="reset" onclick="resetcall()">Reset</button>
+
+			<button class="btn btn-primary menu" style="color: white;background-color: limegreen;" type="button"
+				th:onclick="|window.location.href='@{/dashboard(ssoid=${ssoid})}'|">Menu</button>
+		</div>
+	</form>
+	<form action="/viewClick" method="post">
+		<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
+		<button type="submit" class="btn btn-primary view">View</button>
+	</form>
 	<div class="table-responsive">
-		<table class="table table-striped table-hover" id="searchTable" title="Confidential information">
+		<table class="table table-striped table-hover" id="searchTable" title="Confidential information"
+			style=" border: 1px solid black; border-collapse: collapse;">
 			<thead>
 				<tr>
 					<th>No</th>
@@ -148,43 +197,9 @@
 				</tr>
 			<tbody>
 		</table>
-		<div style="margin-right: 70%;">
-			<form action="/viewClick" method="post">
-				<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
-				<button class="btn btn-lg btn-primary button3" style="color: white; background-color:darkblue"
-					type="submit">View</button>
-			</form>
-		</div>
 	</div>
 	</div>
 	</div>
-	
-	<!-- Amulya[s] added For Timer purpose -->
-	<script type="text/javascript">
-	      //Set the duration for the messages to be displayed in milliseconds (e.g., 5000 for 5 seconds)
-		  var messageDuration = 5000;
-
-		  // Function to hide the success message after a certain duration
-		  function hideSuccessMessage() {
-		    var successMessageDiv = document.getElementById('successMessageDiv');
-		    if (successMessageDiv) {
-		      successMessageDiv.style.display = 'none';
-		    }
-		  }
-
-		  // Function to hide the error message after a certain duration
-		  function hideErrorMessage() {
-		    var errorMessageDiv = document.getElementById('errorMessageDiv');
-		    if (errorMessageDiv) {
-		      errorMessageDiv.style.display = 'none';
-		    }
-		  }
-
-		  // Set timeouts to hide messages after the specified duration
-		  setTimeout(hideSuccessMessage, messageDuration);
-		  setTimeout(hideErrorMessage, messageDuration);
-		  </script>
-		  <!-- Amulya[E] added For Timer purpose -->
 </body>
 
 </html>
