--- a/src/main/resources/templates/ModifySearchData.html
+++ b/src/main/resources/templates/ModifySearchData.html
@@ -1,98 +1,66 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymleaf.org">
 <script type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
-<style>
-	body {
-		font-family: Arial, sans-serif;
-		margin: 0;
-		padding: 0;
-		text-align: center;
-	}
-
-	h1 {
-		padding: 10px 0;
-	}
-
-	form {
-		max-width: 600px;
-		margin: 0 auto;
-		padding: 20px;
-		background-color: #cbe3b5;		
-	}
-
-	input[type="text"],
-	input[type="file"] {
-		display: inline-block;
-		width: 30%;
-		padding: 10px;
-		margin: 5px 0;
-		border: 1px solid #ccc;
-		border-radius: 5px;
-	}
-
-	input[type="file"] {
-		width: 50%;
-	}
-
-	button {
-		display: inline-block;
-		padding: 10px 20px;
-		margin: 10px 5px;
-		background-color: #333;
-		color: #fff;
-		border: none;
-		border-radius: 3px;
-		cursor: pointer;
-	}
-
-	button:hover {
-		background-color: #555;
-	}
-
-	/* Modal styles */
-	.modal {
-		display: none;
-		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background-color: rgba(0, 0, 0, 0.5);
-	}
-
-	.modal-content {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		background-color: #fefefe;
-		padding: 20px;
-		border: 1px solid #888;
-		width: 300px;
-		color: red;
-	}
-
-	.file-input {
-		display: flex;
-		align-items: center;
-	}
-
-</style>
 
 <head>
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<!--<script th:src="@{/assets/js/jquery-3.6.0.js}"></script>-->
 	<title>Search Page</title>
-	<link rel="stylesheet" href="" th:href="@{/css/styles.css}">
+	<link rel="stylesheet" href="" th:href="@{/CSS/styles.css}">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 	<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="js/search.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 0;
+			text-align: center;
+			background-color: #cbe3b5;
+		}
+
+		form {
+			max-width: 600px;
+			margin: 0 auto;
+			padding: 20px;
+			background-color: #cbe3b5;
+			/* border: 1px solid #ddd; 
+	border-radius: 5px;*/
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+		}
+
+		input[type="text"] {
+			display: inline-block;
+			width: 30%;
+			padding: 10px;
+			margin: 5px 0;
+			border: 2px solid rgb(0, 0, 0);
+			border-radius: 5px;
+		}
+		input[type="file"] {
+			width: 55%;
+		}
+		button {
+			display: inline-block;
+			padding: 10px 20px;
+			margin: 10px 5px;
+			background-color: #333;
+			color: #fff;
+			border: none;
+			border-radius: 3px;
+			cursor: pointer;
+		}
+
+		button:hover {
+			background-color: #555;
+		}
+	</style>
 </head>
 
-<body style="background-color: #cbe3b5;" th:onload="onLoadcall([[${STM}]])">
+<body>
 	<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
 	<h5 id=adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>
 	<h1>STM:Silicone Test Method</h1>
@@ -109,7 +77,7 @@
 		<div class="label-container">
 			<label for="stmNumber">STM Number<br>(Quality inspection
 				method_master <br>quality inspection characteristics)
-			</label> <input type="text" id="stmNumber" style="height: 15px;" disabled="disabled" th:value="${stmNo}"
+			</label> <input type="text" id="stmNumber" style="height: 40px;" disabled="disabled" th:value="${stmNo}"
 				oninput="updateDisabledField(this),updateFields()">
 		</div>
 		<div class="label-container">
@@ -141,9 +109,8 @@
 			<div class="file-input">
 				<input type="text" id="pdfFileName" disabled="disabled" th:value="${pdf}" name="pdfFileName">
 				<input type="hidden" id="pdfFileNameHid" th:value="${pdf}" name="pdfFileName">
-
-				<label for="pdfFileName">download</label>
-				<button type="button" class="download-button" onclick="downloadPDF()" id="pdfFileName"
+				<!--				<label for="pdfFileName">download</label>
+--> <button type="button" class="download-button" onclick="downloadPDF()" id="pdfFileName" style="margin-left: 40px;"
 					th:value="${pdf}">PdfDownload</button>
 			</div>
 		</div>
@@ -153,9 +120,9 @@
 			<div class="file-input">
 				<input type="text" id="docFileName" disabled="disabled" th:value="${word}" name="docFileName">
 				<input type="hidden" id="docFileNameHid" th:value="${word}" name="docFileName">
-				<label for="docFileName">download</label>
-				<button type="button" class="download-button" onclick="downloadDocument()" id="docFileName"
-					th:value="${word}">DocDownload</button>
+				<!--				<label for="docFileName">download</label>
+--> <button type="button" class="download-button" onclick="downloadDocument()" id="docFileName"
+					style="margin-left: 40px;" th:value="${word}">DocDownload</button>
 			</div>
 		</div>
 		<!-- Modal for PDF error -->
@@ -176,7 +143,7 @@
 
 		<div class="label-container">
 			<label for="lastUpdated">Last Updated (Drafting Date)</label>
-			<input type="text" id="lastUpdated" disabled="disabled">
+			<input type="text" id="lastUpdated" disabled="disabled" th:value="${draftingdate}" pattern="yyy/MM/dd">
 		</div>
 
 		<div class="label-container">
@@ -213,26 +180,28 @@
 				onclick="openRevisePage()">Revise</button>
 			<button type="button" name="action" value="delete" class="registerclose"
 				onclick="openDeletePage()">Delete</button>
-			<button type="button" name="action" value="return" class="returnClear" th:onclick="|window.location.href='@{/searchPage(ssoid = ${ssoid})}'|">Return</button>
+			<button type="button" name="action" value="return" class="returnClear"
+				th:onclick="|window.location.href='@{/searchPage(ssoid = ${ssoid})}'|">Return</button>
 		</div>
 
 	</form>
-
 	<script type="text/javascript">
 		var stmNumber = document.getElementById('stmNumber').value;
 		function openRevisePage() {
+			//window.location.href = '/revise/' + stmNumber;
 			window.location.href = '/revise/' + stmNumber;
 		}
 
 		function openModifyPage() {
+			//window.location.href = '/modify/' + stmNumber;
 			window.location.href = '/modify/' + stmNumber;
 		}
 
 		function openDeletePage() {
 			window.location.href = '/delete/' + stmNumber;
+			//window.location.href = '/delete/' + stmNumber;
 		}
 	</script>
-	<!-- ADDED[E] AMULYA -->
 </body>
 
 </html>
