--- a/src/main/resources/templates/LoginScreen.html
+++ b/src/main/resources/templates/LoginScreen.html
@@ -16,6 +16,7 @@
 
         .error {
             color: red;
+             font-size: 40px;
             font-weight: bold;
             text-align: center;
         }
